# rust-oauth

./: .env.example  Cargo.toml  README.md
src/: main.rs
src/auth/: googlea.rs  mod.rs
src/auth/google/: controller.rs  mod.rs  types.rs  utils.rs
