[package]
name = "rust-oauth"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.1", feature = ["macros"] }
futures = "0.3"
tokio = { version = "1.0.0", features = ["full"] }
sqlx = { version = "0.8", features = [ "runtime-tokio", "sqlite", "json", "uuid" ] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenv = "0.15"
reqwest = { version = "0.12.12", features = ["json"] }
urlencoding = "2.1"
